force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ExpandBundleLinesByDefault__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpandBundleLinesByDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show all bundles exapanded with all option lines when cart loads.</description>
    <inlineHelpText>Whether the cart page should load with the option lines displayed for all bundles.</inlineHelpText>
    <label>Expand Bundles In Cart</label>
    <type>Checkbox</type>
</CustomField>