force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__FavoriteFilters__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FavoriteFilters__c</fullName>
    <description>Populate comma separated values with API names of fields from the favorite configuration object. These fields will be used as filters in the catalog page</description>
    <inlineHelpText>Populate comma separated values with API names of fields from the favorite configuration object. These fields will be used as filters in the catalog page</inlineHelpText>
    <label>FavoriteFilters</label>
    <type>TextArea</type>
</CustomField>