force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__FieldExpressionsExecutionMode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldExpressionsExecutionMode__c</fullName>
    <description>Mode which Field Expressions will execute in.</description>
    <inlineHelpText>Valid Values: 
* Client
* Server</inlineHelpText>
    <label>Field Expressions Execution Mode</label>
    <length>8</length>
    <type>Text</type>
</CustomField>