force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__FixedButtonBar__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FixedButtonBar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the button bar will be fixed on catalog, configuration and cart pages.</description>
    <inlineHelpText>Indicates that the button bar will be fixed on catalog, configuration and cart pages.</inlineHelpText>
    <label>Fixed Button Bar</label>
    <type>Checkbox</type>
</CustomField>