force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__GroupByFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GroupByFields__c</fullName>
    <label>GroupBy Fields</label>
    <type>TextArea</type>
</CustomField>