force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__GuidePageDefault__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GuidePageDefault__c</fullName>
    <description>The default guide page for product selection</description>
    <inlineHelpText>The default guide page for product selection</inlineHelpText>
    <label>Guide Page Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>