force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__HideAssetActions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideAssetActions__c</fullName>
    <description>Comma separated list  of asset actions which should be hidden.</description>
    <inlineHelpText>Comma separated values of Increment, Amend, Renew, Cancel actions. Listed actions will be hidden from the users.</inlineHelpText>
    <label>Hide Asset Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>