force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__HideCartViews__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideCartViews__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Cart Views</description>
    <inlineHelpText>Indicates whether cart views will be hidden</inlineHelpText>
    <label>Hide Cart Views</label>
    <type>Checkbox</type>
</CustomField>