force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__HideCartViewsCreation__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideCartViewsCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether &quot;Create New View&quot; option on Cart View drop down is hidden.</description>
    <inlineHelpText>Indicates whether &quot;Create New View&quot; option on Cart View drop down is hidden.</inlineHelpText>
    <label>Hide Cart Views Creation</label>
    <type>Checkbox</type>
</CustomField>