force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__HideDatesForOneTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideDatesForOneTime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Dates For One Time Charge</description>
    <inlineHelpText>Hide Dates For One Time Charge</inlineHelpText>
    <label>Hide Dates For One Time Charge</label>
    <type>Checkbox</type>
</CustomField>