force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__HideEvergreenEndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideEvergreenEndDate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the end date will be hidden in the cart view for evergreen line items</description>
    <inlineHelpText>Indicates whether the end date will be hidden in the cart view for evergreen line items</inlineHelpText>
    <label>Hide Evergreen End Date</label>
    <type>Checkbox</type>
</CustomField>