force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__HideGrandTotal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideGrandTotal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked grand total price will be hidden</description>
    <inlineHelpText>When checked grand total line will be hidden</inlineHelpText>
    <label>Hide Grand Total</label>
    <type>Checkbox</type>
</CustomField>