force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__HideResolveConfigLink__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideResolveConfigLink__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to hide resolve configuration error page link.</description>
    <inlineHelpText>When checked the link to the resolve configuration error page is hidden. It is displayed along with the constraint rule messages.</inlineHelpText>
    <label>Hide Resolve Config Link</label>
    <type>Checkbox</type>
</CustomField>