force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__HideSubtotalsInCart__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideSubtotalsInCart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether subtotals should be hidden in the cart view</description>
    <inlineHelpText>Indicates whether subtotals should be hidden in the cart view</inlineHelpText>
    <label>Hide Subtotals In Cart</label>
    <type>Checkbox</type>
</CustomField>