force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__IndicateErrorTypeExclude__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IndicateErrorTypeExclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate products excluded by error type exclude action (DEPRECATED)</description>
    <inlineHelpText>This custom setting is deprecated</inlineHelpText>
    <label>Indicate Error Type Exclude (D)</label>
    <type>Checkbox</type>
</CustomField>