force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__InstanceUrl__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InstanceUrl__c</fullName>
    <description>The Salesforce instance url</description>
    <inlineHelpText>The url of your Salesforce instance. The instance url will be used to create an absolute url for your custom pages.</inlineHelpText>
    <label>Instance Url</label>
    <type>Url</type>
</CustomField>