force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__KeepAbandonedCarts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__KeepAbandonedCarts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether abandoned carts should be kept</description>
    <inlineHelpText>Indicates whether abandoned carts should be kept</inlineHelpText>
    <label>Keep Abandoned Carts</label>
    <type>Checkbox</type>
</CustomField>