force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__LargeCartThreshold__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LargeCartThreshold__c</fullName>
    <description>The threshold of the number of line items in the cart when exceeded indicates a large cart. A value of -1 inactivates the threshold. A large cart influences how items are processed in the application to stay under various platform governor limits..</description>
    <inlineHelpText>The threshold of the number of line items in the cart when exceeded indicates a large cart. A value of -1 inactivates the threshold. A large cart influences how items are processed in the application to stay under various platform governor limits..</inlineHelpText>
    <label>Large Cart Threshold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>