force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__MaxAdjustmentLines__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxAdjustmentLines__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Indicates the maximum number of discount lines allowed for a line item.</description>
    <inlineHelpText>Indicates the maximum number of discount lines allowed for a line item.</inlineHelpText>
    <label>Max Adjustment Lines</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>