force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__MaxAllowedLinesForMassActions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxAllowedLinesForMassActions__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum number of lines allowed for performing mass actions on cart page</description>
    <inlineHelpText>Maximum number of lines allowed for performing mass actions on cart page</inlineHelpText>
    <label>Max Allowed Lines For Mass Actions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>