force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__MaxProductDetailsPerRequest__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxProductDetailsPerRequest__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Defines the maximum number of product details in a single request</description>
    <inlineHelpText>The maximum number of product details allowed per request will be restricted to this number</inlineHelpText>
    <label>Maximum Product Details Per Request</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>