force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__MiscChargeTypes__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MiscChargeTypes__c</fullName>
    <description>Enter the list of miscellaneous charge types. Each charge type should be separated by a new line.</description>
    <inlineHelpText>Enter the list of miscellaneous charge types. Each charge type should be separated by a new line.</inlineHelpText>
    <label>Misc Charge Types</label>
    <type>TextArea</type>
</CustomField>