force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__MultiCurrencyManagement__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MultiCurrencyManagement__c</fullName>
    <description>Indicate the multi-currency management system.</description>
    <inlineHelpText>Indicate which currency management system CPQ will use in a multi-currency environment. 
Valid values:
Apttus
Platform</inlineHelpText>
    <label>Multi Currency Management</label>
    <length>10</length>
    <type>Text</type>
</CustomField>