force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__OptionLineItemColumns__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OptionLineItemColumns__c</fullName>
    <description>Enter the list of fields from the line item object displayed in the Option Hierarchy page.  Each field API name may be separated either by a coma or by a new line.</description>
    <inlineHelpText>Enter the list of fields from the line item object displayed in the Option Hierarchy page.  Each field API name may be separated either by a coma or by a new line.</inlineHelpText>
    <label>Option Line Item Columns</label>
    <type>TextArea</type>
</CustomField>