force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__OptionPricingChunkSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OptionPricingChunkSize__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The option pricing chunk size for bundles with large number of options. The default value is 100. The SFDC governor limit affects the chunk size.</description>
    <inlineHelpText>The option pricing chunk size for bundles with large number of options. The default value is 100. The SFDC governor limit affects the chunk size.</inlineHelpText>
    <label>Option Pricing Chunk Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>