force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__PercentageFieldPrecision__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PercentageFieldPrecision__c</fullName>
    <description>Holds the percentage field precision.
(used by the formatfields function)</description>
    <label>Percentage Field Precision</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>