force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__PerformMassActionsInParallel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PerformMassActionsInParallel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Perform Mass Actions In Parallel</description>
    <inlineHelpText>Perform Mass Actions In Parallel</inlineHelpText>
    <label>Perform Mass Actions In Parallel</label>
    <type>Checkbox</type>
</CustomField>