force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__PopulateAttributeExtensions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PopulateAttributeExtensions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether attribute values are populated in the extension objects</description>
    <inlineHelpText>Indicates whether attribute values are populated in the extension objects</inlineHelpText>
    <label>Populate Attribute Extensions</label>
    <type>Checkbox</type>
</CustomField>