force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__PreventErrorExcludeSelection__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PreventErrorExcludeSelection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to prevent selection of products listed by error type exclude rule action</description>
    <label>Prevent Error Exclude Selection(D)</label>
    <type>Checkbox</type>
</CustomField>