force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__PreventErrorTypeExcludeSelection__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PreventErrorTypeExcludeSelection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevent selection of products excluded by error type exclude rule action. Hides select button (DEPRECATED)</description>
    <inlineHelpText>This custom setting is deprecated</inlineHelpText>
    <label>Prevent Error Type Exclude Selection (D)</label>
    <type>Checkbox</type>
</CustomField>