force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__PricingBatchSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PricingBatchSize__c</fullName>
    <description>The pricing batch size. The default value is 1. The SFDC governor limit affects the batch size.</description>
    <inlineHelpText>The pricing batch size. The default value is 1. The SFDC governor limit affects the batch size.</inlineHelpText>
    <label>Pricing Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>