force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__PricingExecutionMode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PricingExecutionMode__c</fullName>
    <description>The pricing execution mode</description>
    <inlineHelpText>Mode for pricing execution.
Valid Values:
* Classic
* Turbo</inlineHelpText>
    <label>Pricing Execution Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>