force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ProductAttributeDetailPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductAttributeDetailPage__c</fullName>
    <description>The custom page to capture product attribute detail information</description>
    <inlineHelpText>The custom page to capture product attribute detail information</inlineHelpText>
    <label>Product Attribute Detail Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>