force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ProductAttributeExtensionLookupFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductAttributeExtensionLookupFields__c</fullName>
    <description>Contains the names of the Product Attribute Extension tables Lookup Field Names and will be read if the Attribute Extension is enabled</description>
    <inlineHelpText>Comma separated List of values to specify the Product Attribute Extension Objects Lookup Field Names.</inlineHelpText>
    <label>Product Attribute Extension Tables</label>
    <type>TextArea</type>
</CustomField>