force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ProductDisplayMaxLength__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductDisplayMaxLength__c</fullName>
    <defaultValue>21</defaultValue>
    <description>Captures the maximum length of the product name for display. If the product name exceeds the specified length – it will be ellipsis display, else it will wrap the product name. The default length is 21 characters.</description>
    <inlineHelpText>Captures the maximum length of the product name for display. If the product name exceeds the specified length – it will be ellipsis display, else it will wrap the product name. The default length is 21 characters.</inlineHelpText>
    <label>Product Display Max Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>