force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ProductOptionPriceOrder__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductOptionPriceOrder__c</fullName>
    <defaultValue>&quot;Last&quot;</defaultValue>
    <description>Indicates the evaluation order of the product option price in the pricing waterfall.

Valid Values (default = &quot;Last&quot;)
=======================
First
Last</description>
    <inlineHelpText>Indicates the evaluation order of the product option price in the pricing waterfall.

Valid Values (default = &quot;Last&quot;)
=======================
First
Last</inlineHelpText>
    <label>Product Option Price Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>