force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__RemoveInvalidRuleProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RemoveInvalidRuleProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether line items auto included by invalid rules should be auto removed on cart launch. If not auto removed, the user will be prompted to take appropriate action.</description>
    <inlineHelpText>Indicates whether line items auto included by invalid rules should be auto removed on cart launch. If not auto removed, the user will be prompted to take appropriate action.</inlineHelpText>
    <label>Remove Invalid Rule Products</label>
    <type>Checkbox</type>
</CustomField>