force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__RevalidationProductColumns__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RevalidationProductColumns__c</fullName>
    <description>This is deprecated and no longer used</description>
    <inlineHelpText>This is deprecated and no longer used</inlineHelpText>
    <label>Revalidation Product Columns (D)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>