force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__RoundingMode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RoundingMode__c</fullName>
    <defaultValue>&quot;HALF_EVEN&quot;</defaultValue>
    <description>The custom rounding mode. 
Valid values (default=&quot;HALF_EVEN&quot;)
UP
HALF_UP
DOWN
HALF_DOWN
HALF_EVEN</description>
    <inlineHelpText>The custom rounding mode. 
Valid values (default=&quot;HALF_EVEN&quot;)
UP
HALF_UP
DOWN
HALF_DOWN
HALF_EVEN</inlineHelpText>
    <label>Rounding Mode</label>
    <type>TextArea</type>
</CustomField>