force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__RunFinalizationTaskInAsyncMode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RunFinalizationTaskInAsyncMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the post finalization trigger should be run asynchronously</description>
    <inlineHelpText>Indicates whether the post finalization trigger should be run asynchronously</inlineHelpText>
    <label>Run Post Finalize Trigger In Async Mode</label>
    <type>Checkbox</type>
</CustomField>