force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__RunSecondaryFinalizationTaskInAsyncMode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RunSecondaryFinalizationTaskInAsyncMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the secondary finalization task (attributes, usage tiers, etc) should be run asynchronously</description>
    <inlineHelpText>Indicates whether the secondary finalization task (attributes, usage tiers, etc) should be run asynchronously</inlineHelpText>
    <label>Run Misc Finalization Task In Async Mode</label>
    <type>Checkbox</type>
</CustomField>