force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__RunValidationCallbackOnAdd__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RunValidationCallbackOnAdd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Validation Callback should be run when adding a product</description>
    <inlineHelpText>Indicates whether the Validation Callback should be run when adding a product</inlineHelpText>
    <label>Run Validation Callback On Add</label>
    <type>Checkbox</type>
</CustomField>