force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__SaveOnAllActions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SaveOnAllActions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked save operation will be performed on all actions.</description>
    <inlineHelpText>When checked save operation will be performed on all actions.</inlineHelpText>
    <label>Save On All Actions</label>
    <type>Checkbox</type>
</CustomField>