force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__SearchAttributeValuePage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SearchAttributeValuePage__c</fullName>
    <description>The scope to look for related items in related pricing. The default value is Cart
Valid Values are:
============
Cart
Bundle</description>
    <inlineHelpText>The scope to look for related items in related pricing. The default value is Cart
Valid Values are:
============
Cart
Bundle</inlineHelpText>
    <label>Related Price Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>