force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__SearchCategoryDefault__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SearchCategoryDefault__c</fullName>
    <description>The default search category.</description>
    <inlineHelpText>The default category to search using the text entered in the search box during product selection.

AllProducts
AllCategories</inlineHelpText>
    <label>Search Category Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>