force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__SellingTermCalculationMethod__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SellingTermCalculationMethod__c</fullName>
    <defaultValue>&quot;Calendar&quot;</defaultValue>
    <description>Indicates the method to calculate the selling term for Line Items.</description>
    <inlineHelpText>The method to calculate selling terms. With &quot;Billing Preference&quot;, selling term is calculated as indicated by the billing preference associated with the cart or order.

Valid values (default=&quot;Calendar&quot;):
Calendar
Billing Preference</inlineHelpText>
    <label>Selling Term Calculation Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>