force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ServiceLineSplitCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ServiceLineSplitCriteria__c</fullName>
    <description>Comma separated list of related line item fields and asset line item fields to be considered for automatic splitting.</description>
    <inlineHelpText>Comma separated values of asset line item which define the split criteria for asset related line items.</inlineHelpText>
    <label>Service Line Split Criteria</label>
    <type>TextArea</type>
</CustomField>