force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ServicePriceDistributionMethod__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ServicePriceDistributionMethod__c</fullName>
    <defaultValue>&quot;Allocate&quot;</defaultValue>
    <description>The service price distribution method.  Methods are Allocate and Rollup. 
Allocate method distributes the net price of the service to the related lines.  Rollup method rolls up the price for individual related lines and arrives at the service base price. The default value is Allocate.</description>
    <inlineHelpText>The service price distribution method. Methods are Allocate and Rollup. 
Allocate method distributes the net price of the service to the related lines.  Rollup method rolls up the price for individual related lines and arrives at the service base price.</inlineHelpText>
    <label>Service Price Distribution Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>