force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ShowAttributesInCart__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowAttributesInCart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows the specified attributes applicable to the line items in the cart. Attributes appear in the product dialog.</description>
    <inlineHelpText>Shows the specified attributes applicable to the line items in the cart. Attributes appear in the product dialog.</inlineHelpText>
    <label>Show Attributes In Cart</label>
    <type>Checkbox</type>
</CustomField>