force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ShowErrorInHeader__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowErrorInHeader__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether relative url should be generated for links for a Communities user</description>
    <inlineHelpText>Indicates whether relative url should be generated for links for a Communities user</inlineHelpText>
    <label>Generate Relative Url For Sites</label>
    <type>Checkbox</type>
</CustomField>