force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ShowInfoInHeader__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowInfoInHeader__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to show information message from auto include or auto exclude in the header</description>
    <inlineHelpText>Whether to show information message from auto include or auto exclude in the header</inlineHelpText>
    <label>Show Info In Header</label>
    <type>Checkbox</type>
</CustomField>