force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ShowMessageInline__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowMessageInline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show error and warning messages along with the product name</description>
    <inlineHelpText>Show error and warning messages along with the product name</inlineHelpText>
    <label>Show Message Inline(D)</label>
    <type>Checkbox</type>
</CustomField>