force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ShowWarningInHeader__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowWarningInHeader__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to show warning type rule action messages in header (DEPRECATED)</description>
    <inlineHelpText>This custom setting is deprecated</inlineHelpText>
    <label>Show Warning In Header (D)</label>
    <type>Checkbox</type>
</CustomField>